Move crawler and index directory to properties

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -10,3 +10,5 @@ rainbowshoes.crawler.serp.patterns=\
   https://amnibus.com/products/list.*,\
   https://www.super-groupies.com/search.*,\
   https://p-bandai.jp/chara/.*
+rainbowshoes.crawler.directory=/var/lib/rainbowshoes-search/crawler
+rainbowshoes.lucene.directory=/var/lib/rainbowshoes-search/lucene
