--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -2,7 +2,6 @@ name: Build and Test
 
 on:
   push:
-    branches: [ main ]
 
 jobs:
   build-and-test:
@@ -16,7 +15,7 @@ jobs:
       - name: Grant execute permission for gradlew
         run: chmod +x gradlew
       - name: Build with Gradle
-        run: ./gradlew check testReport build
+        run: ./gradlew check build
       - name: Archive reports
         uses: actions/upload-artifact@v2
         with:
