Add dependency in CI

--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -30,3 +30,4 @@ jobs:
       - uses: Azure/container-scan@v0
         with:
           image-name: rainbowshoes-search:${{ github.sha }}
+    needs: build-and-test
